--- a/app/less/main.less
+++ b/app/less/main.less
@@ -15,7 +15,10 @@
 	src: url('../fonts/Circe-Regular.ttf');
 }
 
-body {background-color: black}
+body {
+	background-color: black;
+	font-family: Circe;
+}
 
 h1 {
 	margin-top: 5%;
@@ -24,26 +27,25 @@ h1 {
 }
 
 a {
-	color: white;
-	text-decoration: none;	
+	cursor: pointer;
+	text-decoration: none;
 }
 
 ul {
 	padding: 0;
 	margin: 0;
 	display: inline-flex;
+	li {list-style: none}
 }
 
-li {list-style: none}
 
 #container {
-	font-family: Circe;
 	min-width: 1200px;
 	max-width: 1600px;
 	margin: 0 auto;
 }
 
-#container>div {
+#container>section {
 	background-color: white;
 	display: flex;
 	flex-direction: column;
@@ -61,14 +63,15 @@ li {list-style: none}
 #block-main-top {
 	display: flex;
 	justify-content: space-around;
-	flex-wrap: wrap;
 	#logo {
-		margin-top: 45px;
+		margin: 60px 0 0 140px;
 		font-family: "Futura-Book-C";
-		font-size: 30px;
+		font-size: 24px;
+		text-align: left;
+		text-transform: uppercase;
 	}
 	#logo::before {
-		margin: -25px 10px;
+		margin: -15px 10px 0 0;
 		content: '';
 		height: 83px;
 		width: 73px;
@@ -76,38 +79,48 @@ li {list-style: none}
 		background: url('../img/logo.png') no-repeat top;
 		background-size: contain;
 	}
-	a {
-		margin: 57px 20px;
-		font-size: 18px;
-		opacity: .7;
+	nav {
+		margin-top: 80px;
+		display: flex;
+		justify-content: space-between;
+		flex-basis: 460px;
+		a {
+			font-size: 18px;
+			opacity: .7;
+			color: white;
+			
+		}
+		a:hover {
+			opacity: 1;
+			
+		}
 	}
-	a:hover {
-		opacity: 1;
-		cursor: pointer;
+	.contact {
+		align-self: center;
+		font-size: 40px;
+		font-weight: 700;
+		margin: 55px 85px 0 0;
+		white-space: nowrap;
+	}
+	.contact::before {
+		content: '';
+		margin: 10px;
+		height: 25px;
+		width: 25px;
+		float: left;
+		background: url('../img/telephone.png') no-repeat top;
+		background-size: contain;	
 	}
 }
 
-.contact {
-	align-self: center;
-	font-size: 30px;
-	font-weight: 700;
-	margin: 35px;
-	white-space: nowrap;
-}
-.contact::before {
-	content: '';
-	margin: 3px;
-	height: 25px;
-	width: 25px;
-	float: left;
-	background: url('../img/telephone.png') no-repeat top;
-	background-size: contain;	
-}
 
 #block-main-description {
-	h1 {margin-top: -5%}
+	h1 {
+		margin: -1% 0 67px;
+		font-size: 48px;
+	}
 	h3 {
-		font-size: 24px;
+		font-size: 30px;
 		line-height: 20px;
 	}
 	span {color: #ffda44}
@@ -118,6 +131,19 @@ li {list-style: none}
 	align-self: center;
 	margin-bottom: 2%;
 }
+
+#block-portfolio {
+	a {
+		color: #272727;
+		font-size: 24px;
+		margin: 35px;
+	}
+	a.active {
+		color: #ffda44
+	}
+}
+
+.hidden {display: none}
 
 .owl-carousel .owl-item {
 	img {margin-bottom: 16.5%}
