--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,7 +20,7 @@
 }
 body {
   background-color: black;
-  font-family: Circe;
+  font-family: Circe, arial;
 }
 h2 {
   margin-top: 125px;
@@ -61,7 +61,8 @@ ul li {
   text-align: center;
 }
 #block-main {
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 900px;
   background: url('../img/block-main-bg.png') no-repeat top;
   -webkit-background-size: cover;
           background-size: cover;
@@ -142,6 +143,12 @@ ul li {
           align-self: center;
   margin-bottom: 2%;
 }
+#block-portfolio {
+  height: 800px;
+}
+#block-portfolio ul {
+  margin-top: 20px;
+}
 #block-portfolio a {
   color: #272727;
   font-size: 24px;
@@ -150,18 +157,14 @@ ul li {
 #block-portfolio a.active {
   color: #ffda44;
 }
-.hidden {
+.hidden > div {
   display: none;
-}
-.owl-carousel .owl-item .singleImg {
-  /*height: 720px;*/
-  /*width: 500px;*/
 }
 #block-price {
   height: 1070px;
 }
 #block-price h2 {
-  margin: 20px 0 15px 0;
+  margin: 120px 0 15px 0;
 }
 #block-price ul {
   padding-left: 5%;
@@ -197,7 +200,7 @@ ul li {
   height: 80px;
   font-size: 30px;
   font-family: "Circe-Bold";
-  padding-top: 30px;
+  padding-top: 25px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -266,7 +269,7 @@ form #submit {
   cursor: pointer;
   font-size: 30px;
   font-weight: 700;
-  border-bottom: 1px solid #ffda44;
+  border: 1px solid #ffda44;
 }
 form #submit:hover {
   -webkit-box-shadow: 3px 4px 10px grey;
