--- a/app/less/main.less
+++ b/app/less/main.less
@@ -21,7 +21,7 @@
 
 body {
 	background-color: black;
-	font-family: Circe;
+	font-family: Circe, arial;
 }
 
 h2 {
@@ -57,7 +57,8 @@ ul {
 }
 
 #block-main {
-	min-height: 100vh;
+	height: 100vh;
+	min-height: 900px;
 	background: url('../img/block-main-bg.png') no-repeat top;
 	background-size: cover;
 	color: #ddddde;
@@ -134,6 +135,8 @@ ul {
 }
 
 #block-portfolio {
+	height: 800px;
+	ul {margin-top: 20px}
 	a {
 		color: #272727;
 		font-size: 24px;
@@ -144,18 +147,11 @@ ul {
 	}
 }
 
-.hidden {display: none}
-
-.owl-carousel .owl-item {
-	.singleImg {
-		/*height: 720px;*/
-		/*width: 500px;*/
-	}
-}
+.hidden>div {display: none}
 
 #block-price {
 	height: 1070px;
-	h2 {margin: 20px 0 15px 0}
+	h2 {margin: 120px 0 15px 0}
 	ul {
 		padding-left: 5%;
 		width: 100%;
@@ -182,7 +178,7 @@ ul {
 		height: 80px;
 		font-size: 30px;
 		font-family: "Circe-Bold";
-		padding-top: 30px;
+		padding-top: 25px;
 		box-sizing: border-box;
 	}
 	span {
@@ -236,7 +232,7 @@ form {
 		cursor: pointer;
 		font-size: 30px;
 		font-weight: 700;
-		border-bottom: 1px solid #ffda44;
+		border: 1px solid #ffda44;
 	}
 	#submit:hover {box-shadow: 3px 4px 10px grey}
 }
