--- a/app/less/main.less
+++ b/app/less/main.less
@@ -237,7 +237,7 @@ form {
 	#submit:hover {box-shadow: 3px 4px 10px grey}
 }
 
-#block-contact {
+footer {
 	padding-top: 100px;
 	font-size: 24px;
 	#email {
