--- a/app/less/main.less
+++ b/app/less/main.less
@@ -49,7 +49,7 @@ ul {
 	margin: 0 auto;
 }
 
-#container>section {
+#container>section, footer {
 	background-color: white;
 	display: flex;
 	flex-direction: column;
@@ -217,8 +217,9 @@ form {
 		width: 350px;
 		padding-left: 70px;
 		box-sizing: border-box; 
-		border: 1px solid white;
+		border: 3px solid white;
 		border-bottom: 1px solid black;
+		transition: all 1s ease;
 	}
 	input[name="name"] {background: url('../img/avatar.png') no-repeat 20px}
 	input[name="phone"]{background: url('../img/phone-call.png') no-repeat 20px}
