--- a/app/css/main.css
+++ b/app/css/main.css
@@ -249,8 +249,11 @@ form input {
   padding-left: 70px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 1px solid white;
+  border: 3px solid white;
   border-bottom: 1px solid black;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
 }
 form input[name="name"] {
   background: url('../img/avatar.png') no-repeat 20px;
