--- a/app/css/main.css
+++ b/app/css/main.css
@@ -303,3 +303,8 @@ footer .contact::before {
   height: 36px;
   width: 36px;
 }
+footer p:before {
+  margin-right: 10px;
+  font-family: Font Awesome\ 5 Free;
+  content: "\f1f9";
+}
