--- a/app/less/main.less
+++ b/app/less/main.less
@@ -261,4 +261,9 @@ footer {
 		height: 36px;
 		width: 36px;
 	}
+	p:before {
+		margin-right: 10px;
+		font-family: Font Awesome\ 5 Free;
+	    content: "\f1f9";
+	}
 }
