--- a/app/less/main.less
+++ b/app/less/main.less
@@ -20,15 +20,20 @@
 }
 
 body {
-	background-color: black;
 	font-family: Circe, arial;
+	background: black;
 }
 
 h2 {
-	margin-top: 125px;
-	font-size: 40px;
+	margin: 110px 0 60px 0;
+	font-size: 2.5em;
 	font-weight: 700;
 	text-transform: uppercase;
+}
+
+p, li {
+	font-size: 1.5em;
+
 }
 
 a {
@@ -39,17 +44,16 @@ a {
 ul {
 	padding: 0;
 	margin: 0;
-	display: inline-flex;
+	display: flex;
 	li {list-style: none}
 }
 
-
-#container {
-	width: 1600px;
+.container {
 	margin: 0 auto;
+	max-width: 1600px;
 }
 
-#container>section, footer {
+section, footer {
 	background-color: white;
 	display: flex;
 	flex-direction: column;
@@ -57,33 +61,36 @@ ul {
 }
 
 #block-main {
-	height: 100vh;
-	min-height: 900px;
+	height: 900px;
 	background: url('../img/block-main-bg.png') no-repeat top;
-	background-size: cover;
 	color: #ddddde;
 }
 
 #block-main-top {
 	display: flex;
+	justify-content: center;
+	white-space: nowrap;
 	#logo {
-		margin: 64px 0 0 160px;
+		flex: 0 1 300px;
+		margin-top: 64px;
 		font-family: "GillSans-SemiBold";
-		font-size: 24px;
 		letter-spacing: 1.2px;
 		text-align: left;
 		text-transform: uppercase;
 	}
+	#logo>p {
+		margin: 1px;
+	}	
 	#logo>img {
 		margin: -13px 10px 0 0;
 		float: left;
-		background: url('../img/logo.png') no-repeat top;
 	}
 	nav {
+	    flex: 0 1 700px;
 		margin-top: 80px;
 		li {
-			margin-left: 100px;
-			font-size: 20px;
+			flex: 0 1 222px;
+			font-size: 1.25em;
 			opacity: .7;
 			letter-spacing: 0.15px;
 			color: white;
@@ -96,8 +103,8 @@ ul {
 }
 /* Телефоны в шапке и в подвале */
 .contact {
-	font-size: 36px;
-	margin: 73px 0 0 100px;
+	font-size: 2.25em;
+	margin-top: 73px;
 }
 .contact::before {
 	content: '';
@@ -112,12 +119,12 @@ ul {
 #block-main-description {
 	margin-top: 193px;
 	h1 {
-		font-size: 48px;
+		font-size: 3em;
 		font-weight: 700;
 		line-height: 60px;
 	}
 	h3 {
-		font-size: 30px;
+		font-size: 1.875em;
 		line-height: 80px;
 		font-weight: 400;
 		letter-spacing: 0.75px;
@@ -125,25 +132,11 @@ ul {
 	span {color: #ffda44}
 }
 
-#arrow {
-	align-self: center;
-	margin-bottom: 2%;
-}
-
 #block-portfolio {
-	height: 750px;
-	ul {margin-top: 20px}
-	a {
-		color: #272727;
-		font-size: 24px;
-		margin: 35px;
-	}
-	a.active {
-		color: #ffda44
+	ul li a {
+		margin: 20px;
 	}
 }
-
-.hidden>div {display: none}
 
 #block-price {
 	height: 1070px;
@@ -158,7 +151,7 @@ ul {
 	ul:nth-child(odd) {background-color: #e8e8e8}
 	li {
 		width: 15%;
-		font-size: 24px;
+		font-size: 1.5em;
 		align-self: center;
 		box-sizing: border-box;
 	}
@@ -168,13 +161,10 @@ ul {
 		padding-right: 5%;
 	}
 	ul:last-child>li:first-child {
-		padding-right: 0;
-	}
-	h3 {
 		height: 80px;
-		font-size: 30px;
+		margin-top: 1.66em;
+		font-size: 1.875em;
 		font-family: "Circe-Bold";
-		padding-top: 25px;
 		box-sizing: border-box;
 	}
 	span {
@@ -199,15 +189,15 @@ form {
 	background-color: white;
 	h1 {
 		margin: 80px 0 0 0;
-		font-size: 36px;
+		font-size: 2.25em;
 	}
 	p {
 		margin: 20px 0 10px 0;
-		font-size: 18px;
+		font-size: 1.25em;
 		color: #727272;
 	}
 	input {
-		font-size: 24px;
+		font-size: 1.5em;
 		color: #272727;
 		height: 95px;
 		width: 350px;
@@ -227,7 +217,7 @@ form {
 		color: white;
 		background-color: #ffda44;
 		cursor: pointer;
-		font-size: 30px;
+		font-size: 1.875em;
 		font-weight: 700;
 		border: 1px solid #ffda44;
 	}
@@ -236,10 +226,9 @@ form {
 
 footer {
 	padding-top: 100px;
-	font-size: 24px;
 	#email {
 		margin: 35px auto;
-		font-size: 40px;
+		font-size: 2.5em;
 		font-weight: bold;
 	}
 	#email::before {
@@ -253,7 +242,7 @@ footer {
 	}
 	.contact {
 		margin: 0 auto;
-		font-size: 40px;
+		font-size: 2.5em;
 		font-weight: bold;
 	}
 	.contact::before {
