--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,26 +1,34 @@
 @font-face {
-  font-family: "Circe-Bold";
-  src: url('../fonts/Circe-Bold.ttf');
+  font-family: 'Circe Bold';
+  src: url('../fonts/Circe-Bold.eot');
+  src: url('../fonts/Circe-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Circe-Bold.woff') format('woff'), url('../fonts/Circe-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Circe";
-  src: url('../fonts/Circe-Light.ttf');
+  font-family: 'Circe Light';
+  src: url('../fonts/Circe-Light.eot');
+  src: url('../fonts/Circe-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/Circe-Light.woff') format('woff'), url('../fonts/Circe-Light.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Futura-Book-C";
-  src: url('../fonts/FuturaBookC.ttf');
+  font-family: 'Circe Regular';
+  src: url('../fonts/Circe-Regular.eot');
+  src: url('../fonts/Circe-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Circe-Regular.woff') format('woff'), url('../fonts/Circe-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Circe-Regular";
-  src: url('../fonts/Circe-Regular.ttf');
-}
-@font-face {
-  font-family: "GillSans-SemiBold";
-  src: url('../fonts/Gill-Sans.ttf');
+  font-family: 'Gill Sans';
+  src: url('../fonts/Gill-Sans.eot');
+  src: url('../fonts/Gill-Sans.eot?#iefix') format('embedded-opentype'), url('../fonts/Gill-Sans.woff') format('woff'), url('../fonts/Gill-Sans.woff2') format('woff2'), url('../fonts/Gill-Sans.svg') format('svg'), url('../fonts/Gill-Sans.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 body {
   min-width: 700px;
-  font-family: Circe, arial;
+  font-family: 'Circe Light', arial;
   background: black;
 }
 h2 {
@@ -104,7 +112,7 @@ footer {
   min-width: 350px;
   margin-top: 64px;
   padding-left: 10%;
-  font-family: "GillSans-SemiBold";
+  font-family: 'Gill Sans', arial;
   letter-spacing: 1.2px;
   text-align: left;
   text-transform: uppercase;
@@ -232,13 +240,13 @@ footer {
   height: 80px;
   margin-top: 50px;
   font-size: 1.875em;
-  font-family: "Circe-Bold";
+  font-family: 'Circe Bold';
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 #block-price span {
   font-weight: 400;
-  font-family: "Circe-Regular";
+  font-family: 'Circe Regular';
 }
 #block-price .space {
   width: 5%;
@@ -283,13 +291,13 @@ form input {
   border: 3px solid white;
   border-bottom: 1px solid black;
 }
-form input[name="name"] {
+form input[name='name'] {
   background: url('../img/avatar.png') no-repeat 20px;
 }
-form input[name="phone"] {
+form input[name='phone'] {
   background: url('../img/phone-call.png') no-repeat 20px;
 }
-form input[name="email"] {
+form input[name='email'] {
   background: url('../img/envelope.png') no-repeat 20px;
 }
 form #submit {
@@ -338,7 +346,7 @@ footer .contact::before {
 footer p:before {
   margin-right: 10px;
   font-family: Font Awesome\ 5 Free;
-  content: "\f1f9";
+  content: '\f1f9';
 }
 @media screen and (max-width: 1306px) {
   .contact-menu {
